# scope-dither

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
dither-post-vfx/src/scope_dither/: __init__.py  schema.py
noise-pre-vfx/: README.md  pyproject.toml
noise-pre-vfx/src/scope_noise/: __init__.py  pipeline.py  schema.py
noise-pre-vfx/src/scope_noise/effects/: __init__.py  noise.py
src/scope_dither/: pipeline.py
src/scope_dither/effects/: __init__.py  dither.py
