[project]
name = "scope-dither"
version = "0.1.0"
description = "Classic black and white dithering effect for Daydream Scope"
requires-python = ">=3.12"

[project.entry-points."scope"]
scope_dither = "scope_dither"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_dither"]
